--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 
 {
   "name": "rn-draw-overlay-permission",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo 'No tests yet' && true"
   },
   "keywords": [
     "react-native"
